--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   name             : "Kyriakos Katsamaktsis"
   pronouns         : # example: "she/her"  
   bio              : "PhD student at University College London"
-  location         : "Londong"
+  location         : "London"
   employer         : "University College London"
   uri              : # URL
   email            : "none@example.org" 
