--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # Username
+  linkedin         : "kyriakos-katsamaktsis-157797a4"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
